# python-testing

./: Makefile  README.md  pyproject.toml  python_testing.ipynb
demo/01-why-testing/: why_testing.txt
demo/02-what-inputs-must-be-tested/: what_inputs_must_be_tested.txt
demo/04-pytest-fail/: even.py
demo/04-pytest-fail/tests/: test_even.py
demo/05-coverage/: .coverage  prime.py
demo/05-coverage/full_tests/: test_prime.py
demo/05-coverage/htmlcov/: index.html  prime_py.html  status.json  tests_test_prime_py.html
demo/05-coverage/tests/: test_prime.py
