[tool.poetry]
name = "python-testing"
version = "0.1.0"
description = ""
authors = ["Valentin Khomutenko <valentine.khomutenko@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
jupyter = "^1.0.0"
pytest = "^6.2.2"
pytest-cov = "^2.11.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
